# Simple-cloth-simulation

./: CMakeLists.txt  Camera.h  Cloth.cpp  Cloth.h  Config.h  Mesh.cpp  Mesh.h  Model.h  README.md  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Simulator.cpp  Simulator.h  Sphere.cpp  Sphere.h  main.cpp
shader/: cloth.fs  cloth.vs  fragment_shader.fs
